# ROS_AutoNav

./: .gitignore  README.md
PR1/model/Building/model/: model.sdf
PR1/model/wheeledrobot/model/: model.sdf
PR2/ball_chaser/: CMakeLists.txt
PR2/ball_chaser/src/: drive_bot.cpp  process_image.cpp
PR2/my_robot/launch/: world.launch
PR2/my_robot/urdf/: my_robot.xacro
PR2/my_robot/worlds/: myflat.world
PR3/localisation/: CMakeLists.txt  package.xml
PR3/localisation/launch/: amcl.launch  pr3_config.rviz
PR3/localisation/maps/: map.yaml
PR3/my_robot/launch/: world.launch
PR3/my_robot/rviz/: my_config.rviz
PR3/my_robot/urdf/: my_robot.xacro
PR4/my_robot/launch/: world.launch
PR4/my_robot/worlds/: myflat.world
PR4/slam/: package.xml
PR4/slam/launch/: mapping.launch
PR5/: README.md
PR5/add_markers/: CMakeLists.txt  package.xml  rvizmarkers.rviz
PR5/add_markers/launch/: add_markers.launch
PR5/add_markers/src/: add_markers.cpp  add_markers_odom.cpp
PR5/capstone/: homeservice_world.launch
PR5/my_robot/urdf/: my_robot.gazebo  my_robot.xacro
PR5/pick_objects/: CMakeLists.txt  package.xml
PR5/pick_objects/launch/: pick_objects.launch
PR5/pick_objects/src/: pick_objects.cpp
PR5/scripts/: add_markers.sh  add_markers_odom.sh  home_service.sh  package.xml  pick_objects.sh  test_navigation.sh
PR5/turtlebot_interactions/turtlebot_rviz_launchers/launch/: view_navigation.launch
PR5/turtlebot_interactions/turtlebot_rviz_launchers/rviz/: navigation.rviz
project_1/script/: welcome_message.cpp
project_1/world/: myflat
(+3 files in other folders)
