<?xml version="1.0"?>
<package>
  <name>pick_objects</name>
  <version>0.0.0</version>
  <description>The pick_objects package</description>

  <maintainer email="robond@todo.todo">robond</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>

